--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@gsap/react": "^2.1.1",
     "@splinetool/react-spline": "^2.2.6",
-    "@splinetool/runtime": "^1.0.47",
+    "@splinetool/runtime": "^1.3.8",
     "@studio-freight/lenis": "^1.0.33",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.4",
