--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
     "@gsap/react": "^2.1.1",
-    "@splinetool/react-spline": "^2.2.6",
-    "@splinetool/runtime": "^1.6.8",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.7.7",
     "@studio-freight/lenis": "^1.0.33",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.4",
     "lodash": "^4.17.21",
-    "next": "14.0.4",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
